@@ -7,13 +7,10 @@ import utils.FileHandler;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.io.File;
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.stream.Collectors;
+import java.io.IOException;
+import java.util.Map;
+import java.util.HashMap;
 
 public class ProductService {
     private List<Product> products;
@@ -33,122 +30,148 @@ public class ProductService {
         }
         
         products.add(product);
-        saveProducts();
+        fileHandler.setUpdatingFile(true);
+        fileHandler.saveToFile(FILENAME, products);
+        fileHandler.setUpdatingFile(false);
         System.out.println("Thêm sản phẩm thành công!");
     }
 
     public void updateProduct(Product product) {
         if (product == null) return;
         
+        Optional<Product> existingProduct = findById(product.getId());
+        if (existingProduct.isEmpty()) {
+            System.out.println("Không tìm thấy sản phẩm với mã: " + product.getId());
+            return;
+        }
+
+        // Cập nhật sản phẩm trong danh sách
         for (int i = 0; i < products.size(); i++) {
             if (products.get(i).getId().equals(product.getId())) {
                 products.set(i, product);
-                saveProducts();
                 break;
             }
         }
+
+        // Lưu vào file
+        fileHandler.setUpdatingFile(true);
+        fileHandler.saveToFile(FILENAME, products);
+        fileHandler.setUpdatingFile(false);
+        System.out.println("Cập nhật sản phẩm thành công!");
     }
 
-    public void deleteProduct(String id) {
-        if (id == null || id.trim().isEmpty()) {
-            System.out.println("Mã sản phẩm không hợp lệ!");
-            return;
+    public boolean updateProductQuantity(String productId, int quantity) {
+        Optional<Product> productOpt = findById(productId);
+        if (productOpt.isEmpty()) {
+            System.out.println("Không tìm thấy sản phẩm với mã: " + productId);
+            return false;
         }
-
-        // Kiểm tra sản phẩm tồn tại
-        Optional<Product> productToDelete = findById(id.trim());
-        if (productToDelete.isEmpty()) {
-            System.out.println("Không tìm thấy sản phẩm!");
-            return;
-        }
-
-        // Xóa sản phẩm khỏi danh sách
-        products.removeIf(p -> p.getId().equals(id.trim()));
         
-        try {
-            // Lưu lại danh sách vào file .dat
-            fileHandler.saveToFile(FILENAME, products);
-            
-            // Tạo lại nội dung cho file .txt
-            String txtFilename = FILENAME.replace(".dat", ".txt");
-            List<String> newLines = new ArrayList<>();
-            newLines.add("===== DANH SACH PRODUCTS =====");
-            
-            if (!products.isEmpty()) {
-                for (Product product : products) {
-                    newLines.add("----------------------------------------");
-                    newLines.add(product.getInfo());
-                }
-                newLines.add("----------------------------------------");
-            }
+        Product product = productOpt.get();
+        int currentQuantity = product.getQuantity();
+        
+        if (currentQuantity < quantity) {
+            System.out.println("Số lượng tồn kho không đủ!");
+            return false;
+        }
+        
+        // Cập nhật số lượng mới
+        product.setQuantity(currentQuantity - quantity);
+        
+        // Lưu vào file
+        fileHandler.setUpdatingFile(true);
+        fileHandler.saveToFile(FILENAME, products);
+        fileHandler.setUpdatingFile(false);
+        
+        System.out.println("Cập nhật số lượng sản phẩm thành công!");
+        return true;
+    }
 
-            // Ghi đè file .txt
-            Path txtPath = Paths.get(fileHandler.getDirectory() + txtFilename);
-            Files.write(txtPath, newLines, StandardCharsets.UTF_8);
+    // Các phương thức khác giữ nguyên
+    private void loadProducts() {
+        try {
+            List<String> lines = fileHandler.readAllLines(FILENAME);
+            products = new ArrayList<>();
             
-            System.out.println("Xóa sản phẩm thành công!");
+            for (String line : lines) {
+                if (line.trim().isEmpty() || line.startsWith("===") || line.startsWith("---")) {
+                    continue;
+                }
+                
+                if (line.contains("Computer [")) {
+                    Computer computer = parseComputer(line);
+                    if (computer != null) {
+                        products.add(computer);
+                    }
+                } else if (line.contains("Accessory [")) {
+                    Accessory accessory = parseAccessory(line);
+                    if (accessory != null) {
+                        products.add(accessory);
+                    }
+                }
+            }
         } catch (IOException e) {
-            System.err.println("Lỗi khi lưu file: " + e.getMessage());
+            System.err.println("Lỗi khi đọc file: " + e.getMessage());
+        }
+    }
+
+    private Computer parseComputer(String line) {
+        try {
+            // Format: Computer [ID: xxx, Name: xxx, Price: xxx, Quantity: xxx, CPU: xxx, RAM: xxx, Hard Drive: xxx]
+            String content = line.substring(line.indexOf("[") + 1, line.indexOf("]"));
+            String[] parts = content.split(",");
+            
+            String id = parts[0].substring(parts[0].indexOf(":") + 1).trim();
+            String name = parts[1].substring(parts[1].indexOf(":") + 1).trim();
+            double price = Double.parseDouble(parts[2].substring(parts[2].indexOf(":") + 1).trim());
+            int quantity = Integer.parseInt(parts[3].substring(parts[3].indexOf(":") + 1).trim());
+            String cpu = parts[4].substring(parts[4].indexOf(":") + 1).trim();
+            String ram = parts[5].substring(parts[5].indexOf(":") + 1).trim();
+            String hardDrive = parts[6].substring(parts[6].indexOf(":") + 1).trim();
+            
+            return new Computer(id, name, price, quantity, cpu, ram, hardDrive);
+        } catch (Exception e) {
+            System.err.println("Lỗi khi parse Computer: " + e.getMessage());
+            return null;
+        }
+    }
+
+    private Accessory parseAccessory(String line) {
+        try {
+            // Format: Accessory [ID: xxx, Name: xxx, Price: xxx, Quantity: xxx, Type: xxx]
+            String content = line.substring(line.indexOf("[") + 1, line.indexOf("]"));
+            String[] parts = content.split(",");
+            
+            String id = parts[0].substring(parts[0].indexOf(":") + 1).trim();
+            String name = parts[1].substring(parts[1].indexOf(":") + 1).trim();
+            double price = Double.parseDouble(parts[2].substring(parts[2].indexOf(":") + 1).trim());
+            int quantity = Integer.parseInt(parts[3].substring(parts[3].indexOf(":") + 1).trim());
+            String type = parts[4].substring(parts[4].indexOf(":") + 1).trim();
+            
+            return new Accessory(id, name, price, quantity, type);
+        } catch (Exception e) {
+            System.err.println("Lỗi khi parse Accessory: " + e.getMessage());
+            return null;
         }
     }
 
     public Optional<Product> findById(String id) {
-        if (id == null || id.trim().isEmpty()) {
-            return Optional.empty();
-        }
         return products.stream()
-                .filter(p -> p.getId().equals(id.trim()))
+                .filter(p -> p.getId().equals(id))
                 .findFirst();
     }
 
     public List<Product> findByName(String name) {
-        if (name == null || name.trim().isEmpty()) {
-            return new ArrayList<>();
-        }
         return products.stream()
-                .filter(p -> p.getName().toLowerCase().contains(name.toLowerCase().trim()))
-                .toList();
+                .filter(p -> p.getName().toLowerCase().contains(name.toLowerCase()))
+                .collect(Collectors.toList());
     }
 
-    public List<Computer> getAllComputers() {
-        return products.stream()
-                .filter(p -> p instanceof Computer)
-                .map(p -> (Computer) p)
-                .toList();
-    }
-
-    public List<Accessory> getAllAccessories() {
-        return products.stream()
-                .filter(p -> p instanceof Accessory)
-                .map(p -> (Accessory) p)
-                .toList();
-    }
-
-    public boolean checkStock(String productId, int quantity) {
-        Optional<Product> productOpt = findById(productId);
-        if (productOpt.isEmpty()) {
-            return false;
-        }
-        Product product = productOpt.get();
-        return product.getQuantity() >= quantity && product.getQuantity() > 0;
-    }
-
-    private void saveProducts() {
-        if (products != null) {
-            try {
-                // Lưu file .dat và txt
-                fileHandler.saveToFile(FILENAME, products);
-            } catch (Exception e) {
-                System.err.println("Loi khi luu file: " + e.getMessage());
-            }
-        }
-    }
-
-    private void loadProducts() {
-        products = fileHandler.loadFromFile(FILENAME);
-        if (products == null) {
-            products = new ArrayList<>();
-        }
+    public void deleteProduct(String id) {
+        products.removeIf(p -> p.getId().equals(id));
+        fileHandler.setUpdatingFile(true);
+        fileHandler.saveToFile(FILENAME, products);
+        fileHandler.setUpdatingFile(false);
     }
 
     public List<Product> getAllProducts() {
@@ -181,31 +204,5 @@ public class ProductService {
             });
         }
         System.out.println("----------------------------------------");
-    }
-
-    // Thêm phương thức kiểm tra sản phẩm có trong hóa đơn
-    public boolean isProductInUse(String productId) {
-        // TODO: Implement check if product is used in any invoice
-        return false;
-    }
-
-    // Thêm phương thức kiểm tra và cập nhật số lượng
-    public boolean updateProductQuantity(String productId, int quantity) {
-        Optional<Product> productOpt = findById(productId);
-        if (productOpt.isEmpty()) {
-            return false;
-        }
-        
-        Product product = productOpt.get();
-        int currentQuantity = product.getQuantity();
-        int newQuantity = currentQuantity - quantity;
-        
-        if (newQuantity < 0) {
-            return false;
-        }
-        
-        product.setQuantity(newQuantity);
-        saveProducts();
-        return true;
     }
 } 
